태그를 한글에서 영문으로 변경

--- a/_posts/2015-2-4-우리의-교육이-놓치고-있는-것.md
+++ b/_posts/2015-2-4-우리의-교육이-놓치고-있는-것.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 우리의 교육이 놓치고 있는 것
-tag: 교육 
+tag: education 
 ---
 [시사인](http://m.sisainlive.com/)  기사 [17세 소녀의 '두 문장', 독일을 달구다](http://m.sisainlive.com/news/articleView.html?idxno=22360)  에 나온 독일소녀의 트위터 내용이다.
 > 나는 곧 18세가 된다. 하지만 세금, 집세, 보험 등에 대해 아는 바가 없다. 그러나 시를 분석하는 데는 능하다. 그것도 4개국 언어(독일어, 영어, 프랑스어, 스페인어)로... 
