--- a/_posts/2015-12-03-해외직구-간단정리.md
+++ b/_posts/2015-12-03-해외직구-간단정리.md
@@ -2,36 +2,36 @@
 layout: post
 title: 직구 관련 간단정리
 ---
-### 미국 기준
-##### 제품 찾기와 가격 추세 보기
+## 미국 기준
+### 제품 찾기와 가격 추세 보기  
 * 우선 사고 싶은 제품을 [아마존](http://amazon.com)에서 검색한다.
 * 해당 제품의 주소링크를 복사한 후 [camelcamelcamel](http://camelcamelcamel.com)으로 가서 검색창에 붙여넣으면 제품의 가격추이가 나온다. 아마존 창고에 있는 물건도 있고 써드파티에서 파는 것들도 있다. 해당 제품의 가격이 비싼 시기라면 원하는 가격을 설정해서 tracking 버튼을 누른다. 그러면 그 가격이 되면 메일로 알려준다.
 
-#### 배송대행지(배대지) 설정
+### 배송대행지(배대지) 설정  
 미국 아마존에서 물건을 살 경우 한국까지 직배송(직배)을 해주는 경우는 거의 없다. 때문에 배송대행업체를 써야한다. 대표적인 업체로는 몰테일, 이하넥스, 오마이집, 위메프 등이 있다. 각 업체는 미국의 몇몇 지역에 창고를 두고 있고 그 창고의 주소를 고객에게 제공해준다. 우리는 이 주소로 상품을 받게 된다.  
 해당 상품이 한국까지 직배가 되는 경우라도 결제창에 나타나는 글로벌 배송비용과 배대지업체를 사용해서 물게 되는 배송비를 잘 비교해야 한다. 배대지 업체에는 무게별로 청구되는 비용이 나타나 있으니 참고할 것 
 
-#### 주문시 고려할 사항(미국내 부가세)
+### 주문시 고려할 사항(미국내 부가세)  
 * 미국은 주마다 부과되는 세금이 다르다. 때문에 아마존 제품 상세페이지에서 나오는 가격은 부가세가 제외된 가격이다. 제품을 결제하는 과정에서 배송받는 주소를 선택하게 되는데 이 주소의 지역에 따라 실제로 결제되는 세금이 달라진다. 
 * 대부분의 배대지 업체들은 부가세가 없는 주에 창고를 가지고 있다. 예를 들어 오마이집에서는 델라웨어(DE)에 창고를 가지고 있는데 이곳으로 배송받을 경우 부가세가 붙지 않는다. 
 
-#### 관세
+### 관세  
 목록통관과 일반통관 두 가지가 있다. 우리가 배송받는 대부분의 상품은 목록통관이 적용된다.
-###### 묵록통관 
+#### 묵록통관 
 * 제품구입가격(부가세 포함) + 미국내 배송가격이 200달러 미만인 제품은 목록통관 대상이다. 만약 제품을 200달러에 결제했고 미국내 배대지까지 무료배송이었다면 목록통관으로 관세를 물지 않고 나에게 오게 된다.
 * 200달러 밑이라고 해도 일반통관에 해당되는 제품군들이 있다. 이럴 경우는 무조건 일반통관으로 들어와서 관세가 붙게 된다. 
 * 제품가격(부가세 포함) + 미국내 배송가격이 200달러 이상인 경우는 일반통관으로 각 제품군마다 부과되는 관세를 물게 된다.
 * ** 2015년 12월부터는 미국내 배송비를 제외한 제품가격(부가세 포함)이 200달러 이하일 경우 목록통관을 할 수 있다. 조건이 좋아진 셈 **
 * 사려는 제품이 일반통관에 해당하는 제품군인지는 배송대행업체 과세 페이지를 참고하자. 
 
-#### 이제 실제 제품사는 과정
-##### 아마존에서 주문 
+### 이제 실제 제품사는 과정
+#### 아마존에서 주문 
 * 아마존에서 제품을 검색하고 제품 페이지에서 노란색 계속 버튼을 누르면 결제과정이 시작된다. 
 * 주소에는 배송대행업체 주소를 넣는다.(계정 설정페이지에서 address 를 찾아보면 미리 주소를 등록할 수 있다.)
 * 배송속도를 선택할 수 있다. 왠만한 가격의 제품은 미국내 무료배송을 해준다. 더 빨리 받고 싶으면 2days 배송도 선택할 수 있는데 어차피 한국까지 오는데 시간이 걸리니 무료배송으로 선택하자. 
 * 카드번호를 넣고 결제한다. 그럼 아마존에서 주문은 끝
 
-##### 배송대행업체에서 정보 입력 
+#### 배송대행업체에서 정보 입력 
 * 배송대행업체 홈페이지로 간다. 
 * 배송신청서를 작성한다. 제품정보를 입력할 때보면 Tracking number를 입력하는데, 우리나라로 생각하면 운송장 번호이다. 아마존에서 아직 이 번호가 나오지 않았으므로 이 칸은 비워둔다. 
 * 자, 이제 일단은 끝
@@ -39,7 +39,7 @@ title: 직구 관련 간단정리
 * 주문한 제품이 배대지 창고에 입고가 되면 메일 또는 문자가 날라온다. 입금하라는 금액을 입금하면 제품이 우리 집까지 오게 된다.
 
 
-### 유럽 기준
+## 유럽 기준
 유럽에서 살 때 되면 다시 정리 
 
 
