--- a/_posts/2015-12-03-해외직구-간단정리.md
+++ b/_posts/2015-12-03-해외직구-간단정리.md
@@ -1,4 +1,4 @@
----
+---  
 layout: post  
 title: 직구 관련 간단정리  
 ---  
@@ -18,7 +18,7 @@ title: 직구 관련 간단정리
 
 ### 관세  
 목록통관과 일반통관 두 가지가 있다. 우리가 배송받는 대부분의 상품은 목록통관이 적용된다.
-#### 묵록통관 
+#### 목록통관 
 * 제품구입가격(부가세 포함) + 미국내 배송가격이 200달러 미만인 제품은 목록통관 대상이다. 만약 제품을 200달러에 결제했고 미국내 배대지까지 무료배송이었다면 목록통관으로 관세를 물지 않고 나에게 오게 된다.
 * 200달러 밑이라고 해도 일반통관에 해당되는 제품군들이 있다. 이럴 경우는 무조건 일반통관으로 들어와서 관세가 붙게 된다. 
 * 제품가격(부가세 포함) + 미국내 배송가격이 200달러 이상인 경우는 일반통관으로 각 제품군마다 부과되는 관세를 물게 된다.
