--- a/_posts/2015-12-03-해외직구-간단정리.md
+++ b/_posts/2015-12-03-해외직구-간단정리.md
@@ -3,7 +3,12 @@ layout: post
 title: 직구 관련 간단정리  
 ---  
 
-## 미국 기준    
+## 미국 기준
+
+### 제품 찾기와 가격 추세 보기  
+* 우선 사고 싶은 제품을 [아마존](http://amazon.com)에서 검색한다.  
+* 해당 제품의 주소링크를 복사한 후 [camelcamelcamel](http://camelcamelcamel.com)으로 가서 검색창에 붙여넣으면 제품의 가격추이가 나온다. 아마존 창고에 있는 물건도 있고 써드파티에서 파는 것들도 있다. 해당 제품의 가격이 비싼 시기라면 원하는 가격을 설정해서 tracking 버튼을 누른다. 그러면 그 가격이 되면 메일로 알려준다.  
+
 ### 배송대행지(배대지) 설정  
 미국 아마존에서 물건을 살 경우 한국까지 직배송(직배)을 해주는 경우는 거의 없다. 때문에 배송대행업체를 써야한다. 대표적인 업체로는 몰테일, 이하넥스, 오마이집, 위메프 등이 있다. 각 업체는 미국의 몇몇 지역에 창고를 두고 있고 그 창고의 주소를 고객에게 제공해준다. 우리는 이 주소로 상품을 받게 된다.  
 해당 상품이 한국까지 직배가 되는 경우라도 결제창에 나타나는 글로벌 배송비용과 배대지업체를 사용해서 물게 되는 배송비를 잘 비교해야 한다. 배대지 업체에는 무게별로 청구되는 비용이 나타나 있으니 참고할 것 
