--- a/_posts/2015-12-03-해외직구-간단정리.md
+++ b/_posts/2015-12-03-해외직구-간단정리.md
@@ -24,7 +24,7 @@ title: 직구 관련 간단정리
 * 제품구입가격(부가세 포함) + 미국내 배송가격이 200달러 미만인 제품은 목록통관 대상이다. 만약 제품을 200달러에 결제했고 미국내 배대지까지 무료배송이었다면 목록통관으로 관세를 물지 않고 나에게 오게 된다.
 * 200달러 밑이라고 해도 일반통관에 해당되는 제품군들이 있다. 이럴 경우는 무조건 일반통관으로 들어와서 관세가 붙게 된다. 
 * 제품가격(부가세 포함) + 미국내 배송가격이 200달러 이상인 경우는 일반통관으로 각 제품군마다 부과되는 관세를 물게 된다.
-* ** 2015년 12월부터는 미국내 배송비를 제외한 제품가격(부가세 포함)이 200달러 이하일 경우 목록통관을 할 수 있다. 조건이 좋아진 셈 **
+* __2015년 12월부터는 미국내 배송비를 제외한 제품가격(부가세 포함)이 200달러 이하일 경우 목록통관을 할 수 있다. 조건이 좋아진 셈__
 * 사려는 제품이 일반통관에 해당하는 제품군인지는 배송대행업체 과세 페이지를 참고하자. 
 
 ### 이제 실제 제품사는 과정  
